--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,13 @@
-APP_NAME=Laravel
-APP_ENV=local
+APP_NAME=GameTracker
+APP_ENV=production
 APP_KEY=
-APP_DEBUG=true
-APP_URL=http://localhost
+APP_DEBUG=false
+APP_URL=http://your-production-domain.com
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
+APP_TIMEZONE=UTC
 
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
@@ -18,7 +19,7 @@ BCRYPT_ROUNDS=12
 LOG_CHANNEL=stack
 LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
-LOG_LEVEL=debug
+LOG_LEVEL=error
 
 DB_CONNECTION=sqlite
 # DB_HOST=127.0.0.1
